fix jumping content between add and edit mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -81,15 +81,21 @@ body {
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  table-layout: fixed;
-  word-wrap: break-word;
 
-  & th:first-child {
+  th:first-child {
     width: 170px;
   }
 
-  & input {
-    width: 100%;
+  @media (max-width: 576px) {
+    font-size: 0.9rem;
+
+    th:first-child {
+      width: 130px;
+    }
+
+    input {
+      font-size: 0.9rem;
+    }
   }
 }
 
